# png-mean-color

./: CMakeLists.txt  LICENSE  README.md  color_analysis.cc  color_analysis.h  main_program.cc  png_codec.cc  png_codec.h
